@@ -84,6 +84,7 @@ extern ScmObj MysqlAffectedRows(MYSQL *handle);
 extern ScmObj MysqlFetchFieldNames(MYSQL_RES *result);
 extern ScmObj MysqlFetchLengths(MYSQL_RES *result);
 extern ScmObj MysqlFetchRow(MYSQL_RES *result);
+extern ScmObj MysqlHexString(ScmString *src);
 
 extern void raise_mysql_error(MYSQL *handle, const char *msg);
 
